2015-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (load_tile_rle): Quiet Coverity 10259 "Untrusted
	loop bound".

	* coders/sct.c (ReadSCTImage): Quiet Coverity 10285 "Untrusted
	loop bound".

	* coders/pwp.c (ReadPWPImage): Quiet Coverity 10299 "Untrusted
	loop bound".

	* coders/pcd.c (ReadPCDImage): Quiet Coverity 10301 "Untrusted
	loop bound".

	* coders/tga.c (ReadTGAImage): Quiet Coverity 53418 "Untrusted
	loop bound".

	* wand/magick_compat.c (ParseGeometry): Fix overlap strcpy() in
	dead code.  Quiets Coverity 10078 "Overlapping buffer in memory
	copy" and 10248 "Copy into fixed size buffer".

	* magick/segment.c (Classify): Fix Coverity 64317 "Resource leak".

2015-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Fix Coverity 64064 "Resource leak".

	* coders/txt.c (ReadTXTImage): Fix Coverity 64061 "Resource leak".

	* coders/rla.c (ReadRLAImage): Fix Coverity 64063 "Resource leak".

	* coders/dib.c (ReadDIBImage): Fix Coverity 64057 Resource leak".

	* magick/segment.c (Classify): Fix Coverity 64056 "Resource leak".

	* magick/resize.c (SampleImage): Fix Coverity 64053, 64054, and
	64062 "Resource leak".

	* magick/render.c (TraceStrokePolygon): Fix Coverity 64055, 64059,
	and 64060 "Resource leak".

	* magick/magick.c (ListModuleMap): Quiet Coverity 64058 "Resource
	leak".

2015-04-28  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/dpx.c: Fix Coverity 10305 "Untrusted loop bound".

	* coders/cineon.c: Fix Coverity 10310 "Untrusted loop bound".

2015-04-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.c: All use of user-provided allocation functions
	is done via MagickFree(), MagickMalloc(), and MagickRealloc().

2015-04-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colormap.c (MagickConstrainColormapIndex): For out of
	range condition, specifically return 0 rather than setting index
	to zero, and then returning index.
