@@ -1,3 +1,8 @@
+2015-04-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/pwp.c (ReadPWPImage): Fix Coverity CID 64491 "Integer
+	handling issues".
+
 2015-04-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xcf.c (load_tile_rle): Quiet Coverity 10259 "Untrusted
